--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 controllers:
-    resource: ../src/Controller/
-    type: attribute
+  resource: ../src/Controller/
+  type: attribute
+
+hello:
+  path: /hello
+  # the controller value has the format 'controller_class::method_name'
+  controller: App\Controller\HelloWorldController
