--- a/docker/php-fpm/xdebug.ini
+++ b/docker/php-fpm/xdebug.ini
@@ -1,4 +1,5 @@
 xdebug.mode=debug
+xdebug.remote_enable=1
 xdebug.client_host=host.docker.internal
 xdebug.client_port=9000
 zend_extension=xdebug.so
