--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,10 @@
 controllers:
-  resource: ../src/Controller/
+  resource: ../src/Shared/Infrastructure/Controller/
   type: attribute
+
+kernel:
+  resource: ../src/Shared/Infrastructure/Kernel.php
+  type: annotation
 
 hello:
   path: /hello
