Added PostgreSQL database and Doctrine ORM to work with this DB

--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -13,6 +13,10 @@ RUN if [ ${INSTALL_XDEBUG} = true ]; \
 
 COPY ./docker/php-fpm/xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
 
+# PostgreSQL
+
+RUN apk add --no-cache libpq-dev && docker-php-ext-install pdo_pgsql
+
 # Configure non-root user. Всегда есть баги, которые позволят зловреду выбраться из контейнера и попасть на хостовый компьютер. Предполагая худшее, мы должны обеспечить запуск процессов внутри контейнера от пользователя, который не имеет никаких прав на хостовой машине. Для использования внешних переменных в Dockerfile служат директивы ENV и ARG.
 
 ARG PUID=1000
@@ -21,6 +25,8 @@ ARG PGID=1000
 RUN apk --no-cache add shadow && \
   groupmod -o -g ${PGID} www-data && \
   usermod -o -u ${PUID} -g www-data www-data
+
+USER www-data
 
 # Source code
 
