--- a/docker/.env
+++ b/docker/.env
@@ -1,6 +1,6 @@
 COMPOSE_PROJECT_NAME=symfony
 
-# Users ids could be retrieved by the command `id $USER`
+#Users ids could be retrieved by the command `id $USER`
 
 PUID=1000
 PGID=1000
@@ -12,3 +12,10 @@ NGINX_HOST_HTTP_PORT=888
 #XDebug
 
 INSTALL_XDEBUG=true
+
+#PostgreSQL
+
+POSTGRES_DB=symfony
+POSTGRES_USER=symfony
+POSTGRES_PASSWORD=symfony
+POSTGRES_PORT=5432
