--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,11 @@
         "symfony/framework-bundle": "6.1.*",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "6.1.*",
+        "symfony/uid": "6.1.*",
         "symfony/yaml": "6.1.*"
     },
     "require-dev": {
+        "fakerphp/faker": "^1.19",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
