--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -16,7 +16,7 @@ doctrine:
         is_bundle: false
         type: xml #xml вариант маппинга перенести всю ответственность за детали инфраструктурной реализации маппера на соответствующий слой, избавив домен от лишних зависимостей
         dir: "%kernel.project_dir%/src/Users/Infrastructure/Database/ORM"
-        prefix: 'App\Entity'
+        prefix: 'App\Users\Domain\Entity'
         alias: Users
 
 # when@test:
