--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "symfony/yaml": "6.1.*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^7.1",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "fakerphp/faker": "^1.19",
+        "liip/test-fixtures-bundle": "^2.4",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
