--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -2,8 +2,18 @@
 
 doctrine:
   dbal:
-    url: "%env(resolve:DATABASE_URL)%"
-
+    default_connection: default
+    connections:
+      default:
+        url: '%env(resolve:DATABASE_URL)%'
+        driver: 'pdo_pgsql'
+        server_version: '13'
+        charset: utf8mb4
+      customer:
+        url: '%env(resolve:DATABASE_CUSTOMER_URL)%'
+        driver: 'pdo_pgsql'
+        server_version: '13'
+        charset: utf8mb4
     # IMPORTANT: You MUST configure your server version,
     # either here or in the DATABASE_URL env var (see .env file)
     #server_version: '13'
