Implementation of the CQRS approach in the project for more scalability

--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -1,6 +1,16 @@
 # Чтобы сообщить фреймворку о местонахождении фикстур, нужно определить сервисы для тестового окружения
 services:
+  _defaults:
+    autowire: true
+  
   App\Tests\Resource\Fixture\:
     resource: '%kernel.project_dir%/tests/Resource/Fixture/*'
     tags:
       - { "name": "doctrine.fixture.orm" }
+  
+  App\Shared\Infrastructure\Bus\CommandBus:
+    public: true
+  
+  App\Shared\Infrastructure\Bus\QueryBus:
+    public: true
+    
