--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -9,11 +9,6 @@ doctrine:
         driver: 'pdo_pgsql'
         server_version: '13'
         charset: utf8mb4
-      customer:
-        url: '%env(resolve:DATABASE_CUSTOMER_URL)%'
-        driver: 'pdo_pgsql'
-        server_version: '13'
-        charset: utf8mb4
     # IMPORTANT: You MUST configure your server version,
     # either here or in the DATABASE_URL env var (see .env file)
     #server_version: '13'
@@ -22,12 +17,12 @@ doctrine:
     naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
     auto_mapping: true
     mappings:
-      Users:
+      App:
         is_bundle: false
         type: xml #xml вариант маппинга перенести всю ответственность за детали инфраструктурной реализации маппера на соответствующий слой, избавив домен от лишних зависимостей
         dir: "%kernel.project_dir%/src/Users/Infrastructure/Database/ORM"
         prefix: 'App\Users\Domain\Entity'
-        alias: Users
+        alias: App
 
 # when@test:
 #   doctrine:
