--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,7 +26,10 @@ services:
     App\Shared\Application\Query\QueryHandlerInterface:
       tags:
         - { name: messenger.message_handler, bus: query.bus }
-      
+  
+  App\Users\Infrastructure\Controller\:
+    resource: ../src/Users/Infrastructure/Controller/
+    tags: [ 'controller.service_arguments' ]
 
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
