--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,11 @@
         "dama/doctrine-test-bundle": "^7.1",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "fakerphp/faker": "^1.19",
+        "friendsofphp/php-cs-fixer": "^3.9",
         "liip/test-fixtures-bundle": "^2.4",
+        "phpstan/phpstan": "^1.8",
         "phpunit/phpunit": "^9.5",
+        "qossmic/deptrac-shim": "^0.23.0",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
         "symfony/phpunit-bridge": "^6.1"
